package org.sistema.model;

import org.sistema.use_case.ManageUseCase;

public abstract class ManageModel<T, ID> implements ManageUseCase<T, ID> {
}
